changes to html/css

--- a/index.html
+++ b/index.html
@@ -1,23 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" type="text/css" href="main.css" />
     <title>Portfolio</title>
-</head>
+  </head>
 
-<body>
-    <nav role="navigation">Nav</nav>
+  <body>
+    <nav role="navigation">
+      <ul>
+        <li>Portfolio</li>
+        <li>Bio</li>
+        <li>Email</li>
+        <li>LinkedIn</li>
+        <li>Github</li>
+      </ul>
+    </nav>
     <main>
-        <section class="home">Home</section>
+      <section class="home">Home</section>
 
-        <section class="bio">bio</section>
+      <section class="bio">bio</section>
 
-        <section class="projects">Projects </section>
-
+      <section class="projects">Projects</section>
     </main>
-</body>
-
+  </body>
 </html>
