changes to html/css/js

--- a/index.html
+++ b/index.html
@@ -12,19 +12,35 @@
   <body>
     <nav role="navigation">
       <ul>
-        <li>Portfolio</li>
-        <li>Bio</li>
-        <li>Email</li>
-        <li>LinkedIn</li>
-        <li>Github</li>
+        <li class="home">Home</li>
+        <li class="contact">Contact</li>
+        <li class="portfolio">Portfolio</li>
+        <li class="bioLink">Bio</li>
+        <li>
+          <a
+            href="https://www.linkedin.com/in/jasonfrimpong/"
+            target="Linkedin"
+            class="Linkedin"
+            >Linkedin</a
+          >
+        </li>
+        <li>
+          <a href="https://github.com/jghan011" target="Github" class="Github"
+            >Github</a
+          >
+        </li>
       </ul>
     </nav>
     <main>
-      <section class="home">Home</section>
+      <section class="homePage">Home</section>
 
-      <section class="bio">bio</section>
+      <section class="bioPage">bio</section>
 
       <section class="projects">Projects</section>
+
+      <section class="contactInfo">contactInfo</section>
     </main>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
