--- a/index.html
+++ b/index.html
@@ -15,30 +15,27 @@
     <title>Portfolio</title>
   </head>
 
-  <body>
-    <nav role="navigation">
-      <ul>
-        <li class="home">Home</li>
-        <li class="contact">Contact</li>
-        <li class="portfolio">Portfolio</li>
-        <li class="bioLink">Bio</li>
-        <li>
+  <body class="body">
+    <main>
+      <div class="nav">
+        <label for="toggle">&#9776;</label>
+        <input type="checkbox" id="toggle" />
+        <div class="menu">
+          <a href="#">Home</a>
+          <a href="#">Portfolio</a>
+          <a href="#">Bio</a>
           <a
             href="https://www.linkedin.com/in/jasonfrimpong/"
             target="Linkedin"
             class="Linkedin"
             >Linkedin</a
           >
-        </li>
-        <li>
           <a href="https://github.com/jghan011" target="Github" class="Github"
             >Github</a
           >
-        </li>
-      </ul>
-    </nav>
-    <main>
-      <section class="homePage">Home</section>
+        </div>
+      </div>
+      <section class="homePage"></section>
 
       <section class="bioPage">bio</section>
 
