--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
         <label for="toggle">&#9776;</label>
         <input type="checkbox" id="toggle" />
         <div class="menu">
-          <a href="#">Home</a>
-          <a href="#">Portfolio</a>
-          <a href="#">Bio</a>
+          <a href="#" class="Home">Home</a>
+          <a href="#" class="portfolio">Portfolio</a>
+          <a href="#" class="bioLink">Bio</a>
           <a
             href="https://www.linkedin.com/in/jasonfrimpong/"
             target="Linkedin"
-            class="Linkedin"
+            id="Linkedin"
             >Linkedin</a
           >
-          <a href="https://github.com/jghan011" target="Github" class="Github"
+          <a href="https://github.com/jghan011" target="Github" id="Github"
             >Github</a
           >
         </div>
