changes to html/css

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <label for="toggle">&#9776;</label>
         <input type="checkbox" id="toggle" />
         <div class="menu">
-          <a href="#" class="Home">Home</a>
+          <a href="#" class="home">Home</a>
           <a href="#" class="portfolio">Portfolio</a>
           <a href="#" class="bioLink">Bio</a>
           <a
@@ -35,7 +35,14 @@
           >
         </div>
       </div>
-      <section class="homePage"></section>
+      <section class="homePage">
+        <div class="middle">
+          <h1>Contact</h1>
+          <hr class="line" />
+          <h3 class="email">Email: Jasont.Frimpong@gmail.com</h3>
+          <h4>Github: https://github.com/jghan011</h4>
+        </div>
+      </section>
 
       <section class="bioPage">bio</section>
 
