changes to html/css

--- a/index.html
+++ b/index.html
@@ -44,7 +44,21 @@
         </div>
       </section>
 
-      <section class="bioPage">bio</section>
+      <section class="bioPage">
+           <p> Hello my name is Jason Frimpong and I'm a fullstack flex student at
+        Thinkful Coding =Bootcamp. I've neem learning to code in various languages along
+        with building several projects which is great for leaning how to problem solve. I also enjoy
+        coding because there’s always a big puzzle to solve but you have to fit
+        all the right pieces together for the puzzle to operate correctly.
+            </p>
+
+          <p>  Whenever I have free time I love to play soccer because it takes an
+        immense amount of teamwork to score goals along with defending your own
+        goal. I know that this ability to communicate with others will one day become useful for me in
+        the tech field.
+        </p>
+        </section>
+      </section>
 
       <section class="projects">Projects</section>
 
