changes made to html/css

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
       <section class="bioPage">
            <p> Hello my name is Jason Frimpong and I'm a fullstack flex student at
-        Thinkful Coding =Bootcamp. I've neem learning to code in various languages along
+        Thinkful Coding Bootcamp. I've nee learning to code in various languages along
         with building several projects which is great for leaning how to problem solve. I also enjoy
         coding because there’s always a big puzzle to solve but you have to fit
         all the right pieces together for the puzzle to operate correctly.
@@ -60,7 +60,13 @@
         </section>
       </section>
 
-      <section class="projects">Projects</section>
+      <section class="projects">
+          <h4 class="chelseaFc">CHELSEA FC QUIZ</h4>
+          <a href="https://jghan011.github.io/quizApp2/"><img src="http://www.kodul.cat/look/full/119/1198180/chelsea-fc-iphone-wallpaper.jpg" alt=""class="chelseaLogo"></a>
+            <p class="Cfc-disc">A quiz that test your knowledge of Chelsea FC, there are a total of 10 questions which the viewer can see in the upper right corner along with the current score.  Every time you get a question right your score will increase by 1 point.
+                   </p>
+                  <p class="languages"> Languages: JS/CSS/HTML</p>
+        </section>
 
       <section class="contactInfo">contactInfo</section>
     </main>
