HTML/CSS changes

--- a/index.html
+++ b/index.html
@@ -1,76 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
-    />
-    <link rel="stylesheet" type="text/css" href="main.css" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Portfolio</title>
-  </head>
 
-  <body class="body">
-    <main>
-      <div class="nav">
-        <label for="toggle">&#9776;</label>
-        <input type="checkbox" id="toggle" />
-        <div class="menu">
-          <a href="#" class="home">Home</a>
-          <a href="#" class="portfolio">Portfolio</a>
-          <a href="#" class="bioLink">Bio</a>
-          <a
-            href="https://www.linkedin.com/in/jasonfrimpong/"
-            target="Linkedin"
-            id="Linkedin"
-            >Linkedin</a
-          >
-          <a href="https://github.com/jghan011" target="Github" id="Github"
-            >Github</a
-          >
-        </div>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" />
+  <link rel="stylesheet" type="text/css" href="main.css" />
+  <script src="https://kit.fontawesome.com/de5b636b4b.js"></script>
+  <title>Portfolio</title>
+</head>
+
+<body class="body">
+  <main>
+    <div class="nav">
+      <label for="toggle">&#9776;</label>
+      <input type="checkbox" id="toggle" />
+      <div class="menu">
+        <a href="#" class="home">Home</a>
+        <a href="#" class="portfolio">Portfolio</a>
+        <a href="#" class="bioLink">Bio</a>
+        <a href="https://www.linkedin.com/in/jasonfrimpong/" target="Linkedin" id="Linkedin"><i class="fab fa-linkedin"></i></a>
+        <a href="https://github.com/jghan011" target="Github" id="Github">Github</a>
       </div>
-      <section class="homePage">
-        <div class="middle">
-          <h1>Contact</h1>
-          <hr class="line" />
-          <h3 class="email">Email: Jasont.Frimpong@gmail.com</h3>
-          <h4>Github: https://github.com/jghan011</h4>
-        </div>
-      </section>
+    </div>
+    <section class="homePage">
+      <div class="middle">
+        <h1>Contact</h1>
+        <hr class="line" />
+        <h3 class="email">Email: Jasont.Frimpong@gmail.com</h3>
+        <h4>Github: https://github.com/jghan011</h4>
+      </div>
+    </section>
 
-      <section class="bioPage">
-           <p> Hello my name is Jason Frimpong and I'm a fullstack flex student at
+    <section class="bioPage">
+      <p> Hello my name is Jason Frimpong and I'm a fullstack flex student at
         Thinkful Coding Bootcamp. I've nee learning to code in various languages along
         with building several projects which is great for leaning how to problem solve. I also enjoy
         coding because there’s always a big puzzle to solve but you have to fit
         all the right pieces together for the puzzle to operate correctly.
-            </p>
+      </p>
 
-          <p>  Whenever I have free time I love to play soccer because it takes an
+      <p> Whenever I have free time I love to play soccer because it takes an
         immense amount of teamwork to score goals along with defending your own
         goal. I know that this ability to communicate with others will one day become useful for me in
         the tech field.
-        </p>
-        </section>
-      </section>
+      </p>
+    </section>
+    </section>
 
-      <section class="projects">
-          <h4 class="chelseaFc">CHELSEA FC QUIZ</h4>
-          <a href="https://jghan011.github.io/quizApp2/"><img src="http://www.kodul.cat/look/full/119/1198180/chelsea-fc-iphone-wallpaper.jpg" alt=""class="chelseaLogo"></a>
-            <p class="Cfc-disc">A quiz that test your knowledge of Chelsea FC, there are a total of 10 questions which the viewer can see in the upper right corner along with the current score.  Every time you get a question right your score will increase by 1 point.
-                   </p>
-                  <p class="languages"> Languages: JS/CSS/HTML</p>
-        </section>
+    <section class="projects">
+      <h4 class="chelseaFc">CHELSEA FC QUIZ</h4>
+      <a href="https://jghan011.github.io/quizApp2/"><img
+          src="http://www.kodul.cat/look/full/119/1198180/chelsea-fc-iphone-wallpaper.jpg" alt=""
+          class="chelseaLogo"></a>
+      <p class="Cfc-disc">A quiz that test your knowledge of Chelsea FC, there are a total of 10 questions which the
+        viewer can see in the upper right corner along with the current score. Every time you get a question right your
+        score will increase by 1 point.
+      </p>
+      <p class="languages"> Languages: JS/CSS/HTML</p>
+    </section>
 
-      <section class="contactInfo">contactInfo</section>
-    </main>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="index.js"></script>
-  </body>
+    <section class="contactInfo">contactInfo</section>
+  </main>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="index.js"></script>
+</body>
+
 </html>
