--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <a href="#" class="portfolio">Portfolio</a>
         <a href="#" class="bioLink">Bio</a>
         <a href="https://www.linkedin.com/in/jasonfrimpong/" target="Linkedin" id="Linkedin"><i class="fab fa-linkedin"></i></a>
-        <a href="https://github.com/jghan011" target="Github" id="Github">Github</a>
+        <a href="https://github.com/jghan011" target="Github" id="Github"><i class="fab fa-github"></i></a>
       </div>
     </div>
     <section class="homePage">
@@ -32,19 +32,19 @@
         <h1>Contact</h1>
         <hr class="line" />
         <h3 class="email">Email: Jasont.Frimpong@gmail.com</h3>
-        <h4>Github: https://github.com/jghan011</h4>
+        <h3>Github: https://github.com/jghan011</h3>
       </div>
     </section>
 
     <section class="bioPage">
-      <p> Hello my name is Jason Frimpong and I'm a fullstack flex student at
+      <p class= "paragraph"> Hello my name is Jason Frimpong and I'm a fullstack flex student at
         Thinkful Coding Bootcamp. I've nee learning to code in various languages along
         with building several projects which is great for leaning how to problem solve. I also enjoy
         coding because there’s always a big puzzle to solve but you have to fit
         all the right pieces together for the puzzle to operate correctly.
       </p>
 
-      <p> Whenever I have free time I love to play soccer because it takes an
+      <p class = "paragraphTwo"> Whenever I have free time I love to play soccer because it takes an
         immense amount of teamwork to score goals along with defending your own
         goal. I know that this ability to communicate with others will one day become useful for me in
         the tech field.
