--- a/index.html
+++ b/index.html
@@ -37,18 +37,20 @@
     </section>
 
     <section class="bioPage">
+     
       <p class= "paragraph"> Hello my name is Jason Frimpong and I'm a fullstack flex student at
-        Thinkful Coding Bootcamp. I've nee learning to code in various languages along
-        with building several projects which is great for leaning how to problem solve. I also enjoy
+        Thinkful Coding Bootcamp. I've been learning to code in various languages along
+        with building projects which is great for leaning how to problem solve. I find joy in
         coding because there’s always a big puzzle to solve but you have to fit
         all the right pieces together for the puzzle to operate correctly.
       </p>
 
-      <p class = "paragraphTwo"> Whenever I have free time I love to play soccer because it takes an
+      <p class = "paragraphTwo"> Whenever I have free time I love to play soccer, because it takes an
         immense amount of teamwork to score goals along with defending your own
-        goal. I know that this ability to communicate with others will one day become useful for me in
+        goal. I know that this ability to work as a team towards a common goal will one day become useful for me in
         the tech field.
       </p>
+
     </section>
     </section>
 
@@ -57,9 +59,9 @@
       <a href="https://jghan011.github.io/quizApp2/"><img
           src="http://www.kodul.cat/look/full/119/1198180/chelsea-fc-iphone-wallpaper.jpg" alt=""
           class="chelseaLogo"></a>
-      <p class="Cfc-disc">A quiz that test your knowledge of Chelsea FC, there are a total of 10 questions which the
-        viewer can see in the upper right corner along with the current score. Every time you get a question right your
-        score will increase by 1 point.
+      <p class="Cfc-disc">A quiz that test your knowledge of Chelsea FC. There are a total of 10 questions which the
+        viewer can see in the upper right corner, along with the current score. Every time you get a question right your
+        score will increase.
       </p>
       <p class="languages"> Languages: JS/CSS/HTML</p>
     </section>
