added pargraph and font changes

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <a href="https://jghan011.github.io/quizApp2/"><img
           src="http://www.kodul.cat/look/full/119/1198180/chelsea-fc-iphone-wallpaper.jpg" alt=""
           class="chelseaLogo"></a>
-      <p class="Cfc-disc">A quiz that test your knowledge of Chelsea FC. There are a total of 10 questions which the
+      <p class="Cfc-disc">The box above is a quiz that tests your knowledge on Chelsea FC. There are a total of 10 questions which the
         viewer can see in the upper right corner, along with the current score. Every time you get a question right your
         score will increase.
       </p>
